feat: Implement project save/load and Gemini integration
Integrates Google's Gemini API for SVG generation and adds functionality to save and load project configurations. Updates dependencies and refactors component types and service logic to support these features. Includes a new Cross Tee component type and separates API key input from the access passcode on the lock screen.

--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
   "imports": {
     "react/": "https://esm.sh/react@^19.2.4/",
     "react": "https://esm.sh/react@^19.2.4",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+    "@google/genai": "https://esm.sh/@google/genai@^1.41.0",
+    "read-excel-file": "https://esm.sh/read-excel-file@^6.0.3"
   }
 }
 </script>
