--- a/index.html
+++ b/index.html
@@ -87,8 +87,9 @@
     "react/": "https://esm.sh/react@^19.2.4/",
     "react": "https://esm.sh/react@^19.2.4",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.42.0",
-    "read-excel-file": "https://esm.sh/read-excel-file@^6.0.3"
+    "@google/generative-ai": "https://esm.sh/@google/generative-ai@^0.1.3",
+    "read-excel-file": "https://esm.sh/read-excel-file@^6.0.3",
+    "@google/genai": "https://esm.sh/@google/genai@^1.42.0"
   }
 }
 </script>
